--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,13 +6,27 @@
 
 body{
     overflow-x: hidden;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #f0f0f0;
 }
-
 
 .row{
     max-width: 1400px;
+    padding-top: 20px;
     height: auto;
     margin: 0 auto;
+}
+
+
+h1{
+    border-bottom: 2px solid #b6d5e3;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 3px;
+    padding-bottom: 20px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    width: 17%;
 }
 
 .navbar{
@@ -55,6 +69,7 @@ body{
     top: -50%;
 }
 
+
 .section-start{
     position: relative;
 }
@@ -63,18 +78,26 @@ body{
     width: 100%;
     position: absolute;
     height: auto;
-    top: -130px;
+    top: -150px;
 }
+
 
 .box-intro{
     float: left;
     width: 300px;
-    margin: 0 10% 0 2%;
-    height: 250px;
-    background-color: #f0f0f0;
+    margin: 0 5%;
+    height: auto;
+    background-color: #e3e3e3;
     border-radius: 5px;
     box-shadow: 1px 0px 5px #000000;
+    transition: margin-top 1s;
 }
+
+.box-intro:hover{
+    margin-top: -50px;
+    box-shadow: 2px 2px 15px #000000;
+}
+
 
 .del1{
     width: 100%;
@@ -93,18 +116,40 @@ body{
 
 .del2{
     width: 100%;
+    padding-bottom: 10px;
+}
+
+.del2 h3{
+    padding-top: 5px;
+    font-size: 25px;
+    color: #454545;
+    text-align: center;     
 }
 
 .del2 p{
     text-align: center;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
     padding-top:10px;
     color: #4a4a4a;
 }
 
-.intro-text{
-    padding-top: 200px;
-    text-align: center;
-    padding-bottom:300px;
+.section-fact{
+    padding-top: 50px;
+    margin-top: 300px;
+    width: 100%;
+    background-color: white;
 }
+
+.intro-text{
+    padding-bottom:100px;
+}
+
+.intro-text p{    
+    width: 75%;
+    line-height: 200%;
+    font-size: 20px;    
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+
