--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,22 +182,25 @@ h1{
     overflow: hidden;
     width: 100%;
     padding: 0;
+    background-color: #000000;
 }
 
 .foods{
-    width: 100%;
+    width: 101%;
     height: auto;
 }
 
 .foods li{
     display: block;
     float: left;
+    overflow: hidden;
     list-style: none;
 }
 
 
 .foods .img-big{
     width: 66%;
+    
 }
 
 .foods .img-small{
@@ -207,5 +210,80 @@ h1{
 .foods img {
     width: 100%;
     height: auto;
-    transform: scale(1.06);
+    transform: scale(1.3);
+    opacity: 0.6;
+    transition: transform 0.8s;
 }
+
+.foods img:hover {
+    transform: scale(1.06);
+    opacity: 1;
+}
+
+/***********************************/
+/*          SECTION-???         */
+/*********************************/
+
+.section-test{
+    background-color: #f0f0f0;;
+    width: 100%;
+}
+
+.norway-map{
+    width: 100%;
+    height: auto;
+    overflow: auto;
+    background-color: #f0f0f0;
+}
+
+.box-map{
+    float: left;
+    background-color: #f0f0f0;
+    margin: 5%;
+    width: 40%;
+}
+
+.box-map img{
+    width: 450px;
+    margin-top:75px;
+    margin-left: 50px;
+    height: auto;
+    box-shadow: 1px 1px 5px #000000;
+}
+
+.map-text{
+    padding-left: 160px;
+}
+
+.box-map h1{
+    width: 350px;
+    letter-spacing: 2px;
+    margin-bottom: 40px;
+}
+
+.box-map p{
+    margin-bottom: 30px;
+    font-size: 18px;
+    line-height: 27px;
+
+}
+
+.section-town{
+    width: 100%;
+    background-color: #FFFFFF;
+
+}
+
+
+
+
+
+
+
+
+/*                   
+Oslo: 580 000
+Bergen: 213 585
+Trondheim 147 139
+Stavanger 121 610
+*/
